--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A feathers client for admin-on-rest",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "make build",
+    "clean": "make clean",
+    "prepublish": "make build"
   },
   "files": [
     "LICENSE",
