--- a/package.json
+++ b/package.json
@@ -40,5 +40,25 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0"
-  }
+  },
+  "contributors": [
+    {
+      "name": "Tomasz Bak",
+      "email": null,
+      "url": "https://github.com/tb",
+      "contributions": 2,
+      "additions": 187,
+      "deletions": 127,
+      "hireable": null
+    },
+    {
+      "name": "José Luis Di Biase",
+      "email": "josx@interorganic.com.ar",
+      "url": "https://github.com/josx",
+      "contributions": 3,
+      "additions": 228,
+      "deletions": 1,
+      "hireable": true
+    }
+  ]
 }
