--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A feathers client for admin-on-rest",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "npm run build",
+    "test": "mocha",
     "build": "make build",
     "clean": "make clean",
     "prepublish": "make build"
@@ -39,7 +40,10 @@
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.4.1",
+    "sinon": "^2.2.0"
   },
   "contributors": [
     {
