--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "mocha",
     "build": "make build",
     "clean": "make clean",
-    "prepublish": "make build"
+    "prepublish": "make build",
+    "publish": "git push origin --tags && npm run changelog && git push origin",
+    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
+    "release:patch": "npm version patch && npm publish",
+    "release:minor": "npm version minor && npm publish",
+    "release:major": "npm version major && npm publish"
   },
   "files": [
     "LICENSE",
