--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "admin-on-rest": "^1.0.1"
   },
   "devDependencies": {
+    "admin-on-rest": "^1.0.1",
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
