--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/josx/aor-feathers-client#readme",
   "peerDependencies": {
     "admin-on-rest": "^1.0.1",
+    "debug": "^3.0.0",
     "feathers-client": ">=1.9.0"
   },
   "devDependencies": {
