--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "admin-on-rest": "^1.0.1",
     "debug": "^3.0.0",
     "feathers-client": ">=1.9.0",
-    "jwt-decode": "^2.2.0"
+    "jwt-decode": "^2.2.0",
+    "object-diff": "^0.0.4"
   },
   "devDependencies": {
     "admin-on-rest": "^1.0.1",
