--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "istanbul": "^0.4.5",
     "jwt-decode": "^2.2.0",
     "mocha": "^3.4.1",
-    "sinon": "^2.2.0"
+    "sinon": "^2.2.0",
+    "object-diff": "^0.0.4"
   },
   "contributors": [
     {
