--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   },
   "homepage": "https://github.com/josx/aor-feathers-client#readme",
   "peerDependencies": {
-    "admin-on-rest": "^1.0.1",
+    "admin-on-rest": "^1.4.0",
     "debug": "^3.0.0",
     "feathers-client": ">=1.9.0",
     "jwt-decode": "^2.2.0",
     "object-diff": "^0.0.4"
   },
   "devDependencies": {
-    "admin-on-rest": "^1.0.1",
+    "admin-on-rest": "^1.4.0",
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
@@ -57,8 +57,10 @@
     "istanbul": "^0.4.5",
     "jwt-decode": "^2.2.0",
     "mocha": "^3.4.1",
-    "sinon": "^2.2.0",
-    "object-diff": "^0.0.4"
+    "object-diff": "^0.0.4",
+    "react": "15.4.0",
+    "react-dom": "15.4.0",
+    "sinon": "^2.2.0"
   },
   "contributors": [
     {
