--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aor-feathers-client",
   "version": "1.0.0",
-  "description": "A feathers client for admin-on-rest",
+  "description": "A feathers client for react-admin",
   "main": "lib/index.js",
   "scripts": {
     "pretest": "npm run build",
@@ -41,23 +41,22 @@
   },
   "homepage": "https://github.com/josx/aor-feathers-client#readme",
   "peerDependencies": {
-    "admin-on-rest": "^1.4.0",
+    "react-admin": "^2.1.1",
+    "@feathersjs/client": "^3.5.3"
+  },
+  "dependencies": {
     "debug": "^3.0.0",
-    "feathers-client": ">=1.9.0",
     "jwt-decode": "^2.2.0",
     "object-diff": "^0.0.4"
   },
   "devDependencies": {
-    "admin-on-rest": "^1.4.1",
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
-    "jwt-decode": "^2.2.0",
     "mocha": "^5.2.0",
-    "object-diff": "^0.0.4",
     "react": "15.4.0",
     "react-dom": "15.4.0",
     "sinon": "^2.2.0"
