--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aor-feathers-client",
   "version": "1.0.0",
-  "description": "A feathers client for admin-on-rest",
+  "description": "A feathers client for react-admin",
   "main": "lib/index.js",
   "scripts": {
     "pretest": "npm run build",
@@ -14,8 +14,8 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts",
-    "mocha": "env DEBUG=aor-feathers-client:* mocha"
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts --require babel-register",
+    "mocha": "env DEBUG=aor-feathers-client:* mocha  --require babel-register"
   },
   "files": [
     "LICENSE",
@@ -41,25 +41,26 @@
   },
   "homepage": "https://github.com/josx/aor-feathers-client#readme",
   "peerDependencies": {
-    "admin-on-rest": "^1.4.0",
+    "react-admin": "^2.1.1",
+    "@feathersjs/client": "^3.5.3"
+  },
+  "dependencies": {
     "debug": "^3.0.0",
-    "feathers-client": ">=1.9.0",
     "jwt-decode": "^2.2.0",
     "object-diff": "^0.0.4"
   },
   "devDependencies": {
-    "admin-on-rest": "^1.4.1",
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.26.0",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
-    "jwt-decode": "^2.2.0",
     "mocha": "^5.2.0",
-    "object-diff": "^0.0.4",
-    "react": "15.4.0",
-    "react-dom": "15.4.0",
+    "react-admin": "^2.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "sinon": "^2.2.0"
   },
   "contributors": [
