Add redirectTo to options
redirectTo is used when AUTH_CHECK fails. If an auth session expires, etc, the user will be redirected to the path set in redirectTo

This PR adds the redirectTo option, as well as some rudimentary testing

Implements #59

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@feathersjs/client": "^3.5.3"
   },
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "debug": "^3.0.0",
     "jwt-decode": "^2.2.0",
     "object-diff": "^0.0.4"
