--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.26.0",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^5.2.0",
-    "react-admin": "^2.1.1",
     "react": "^16.4.1",
+    "react-admin": "^2.1.1",
     "react-dom": "^16.4.1",
     "sinon": "^2.2.0"
   },
