Renaming aor-feathers-client to ra-data-feathers
Signed-off-by: José Luis Di Biase <josx@interorganic.com.ar>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:7.10
-    working_directory: ~/aor-feathers-client
+    working_directory: ~/ra-data-feathers
     steps:
       - checkout
       - restore_cache:
