Package Json: removes unnecesary eslint dependencies
+ Adds airbnb base

--- a/package.json
+++ b/package.json
@@ -59,10 +59,9 @@
     "babel-register": "^6.26.0",
     "chai": "^3.5.0",
     "eslint": "^5.7.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-node": "^7.0.1",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^5.2.0",
     "react": "^16.4.1",
