--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "chai-as-promised": "^7.1.1",
     "debug": "^3.0.0",
+    "feathers-hooks-common": "^4.20.7",
     "jwt-decode": "^2.2.0",
     "object-diff": "^0.0.4"
   },
