Undo softDelete option and support v4

--- a/package.json
+++ b/package.json
@@ -43,12 +43,11 @@
   "homepage": "https://github.com/josx/ra-data-feathers#readme",
   "peerDependencies": {
     "react-admin": "^2.1.1",
-    "@feathersjs/client": "^3.5.3"
+    "@feathersjs/client": "^3.5.3 || ^4.3.0"
   },
   "dependencies": {
     "chai-as-promised": "^7.1.1",
     "debug": "^3.0.0",
-    "feathers-hooks-common": "^4.20.7",
     "jwt-decode": "^2.2.0",
     "object-diff": "^0.0.4"
   },
