--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -49,6 +49,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "lijoantony",
+      "name": "Lijo Antony",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1202940?v=4",
+      "profile": "https://github.com/lijoantony",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
