--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -79,6 +79,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "dreamrace",
+      "name": "Dream",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/3618360?v=4",
+      "profile": "https://github.com/dreamrace",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
