Add @wedneyyuri as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -89,6 +89,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "wedneyyuri",
+      "name": "Wédney Yuri",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/7511692?v=4",
+      "profile": "https://github.com/wedneyyuri",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
