--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -99,6 +99,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "7flash",
+      "name": "Igor Berlenko",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/4569866?v=4",
+      "profile": "https://github.com/7flash",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
