--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -119,6 +119,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "DanStorm",
+      "name": "Dan Stevens",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/5097089?v=4",
+      "profile": "https://github.com/DanStorm",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
